--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Magic Tournament Organizer</title>
-    <!--<link rel="stylesheet" href="../css/main.css" />-->
+    <!--<link rel="stylesheet" href="main.css" />-->
+
 </head>
 <body>
-
-<div id="react"></div>
-
-<script src="../static/built/bundle.js"></script>
-
+<div id="root"></div>
+<script src="bundle.js"></script>
 </body>
 </html>
